# hyper_relational_ilp

./: .gitignore  README.md  setup.cfg
best_configs/fully_inductive/: BLP_wd20_100_v1_pairs_0.json  BLP_wd20_100_v2_pairs_0.json  BLP_wd20_66_v1_pairs_0.json  BLP_wd20_66_v2_pairs_0.json  QBLP_wd20_100_v1_pairs_0.json  QBLP_wd20_100_v1_pairs_2.json  QBLP_wd20_100_v1_pairs_4.json  QBLP_wd20_100_v1_pairs_6.json  QBLP_wd20_100_v2_pairs_0.json  QBLP_wd20_100_v2_pairs_2.json  QBLP_wd20_100_v2_pairs_4.json  QBLP_wd20_100_v2_pairs_6.json  QBLP_wd20_66_v1_pairs_0.json  QBLP_wd20_66_v1_pairs_2.json  QBLP_wd20_66_v1_pairs_4.json  QBLP_wd20_66_v1_pairs_6.json  QBLP_wd20_66_v2_pairs_0.json  QBLP_wd20_66_v2_pairs_2.json  QBLP_wd20_66_v2_pairs_4.json  QBLP_wd20_66_v2_pairs_6.json  StarE_wd20_100_v1_pairs_0.json  StarE_wd20_100_v1_pairs_2.json  StarE_wd20_100_v1_pairs_4.json  StarE_wd20_100_v1_pairs_6.json  StarE_wd20_100_v2_pairs_0.json  StarE_wd20_100_v2_pairs_2.json  StarE_wd20_100_v2_pairs_4.json  StarE_wd20_100_v2_pairs_6.json  StarE_wd20_66_v1_pairs_0.json  StarE_wd20_66_v1_pairs_2.json  StarE_wd20_66_v1_pairs_4.json  StarE_wd20_66_v1_pairs_6.json  StarE_wd20_66_v2_pairs_0.json  StarE_wd20_66_v2_pairs_2.json  StarE_wd20_66_v2_pairs_4.json  StarE_wd20_66_v2_pairs_6.json
best_configs/semi_inductive/: BLP_semi_wd20_25_pairs_0.json  BLP_semi_wd20_33_pairs_0.json  QBLP_semi_wd20_25_pairs_0.json  QBLP_semi_wd20_25_pairs_2.json  (+6 more)
executables/: evaluate_qualifier_ranks.py  evaluate_relation_importance.py  experiments.sh  main.py  run_from_config.py
tests/: test_models.py
(+23 files in other folders)
