##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = ilp

[options]
install_requires =
    torch
    torch-geometric
    torch-scatter
    pykeen>=1.0.5
    wandb
    tqdm
    click
    numpy
    googledrivedownloader
    nevergrad
    pystow>=0.0.12
    frozendict
    pandas
    scipy
    matplotlib
    seaborn
    requests

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ilp = ilp.cli:main
